--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ importlib-resources==5.12.0
 ipykernel==6.24.0
 ipython==8.14.0
 jedi==0.18.2
+joblib==1.3.2
 jupyter_client==8.3.0
 jupyter_core==5.3.1
 kiwisolver==1.4.4
@@ -35,9 +36,11 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
 pyzmq==25.1.0
+scikit-learn==1.3.1
 scipy==1.10.1
 six==1.16.0
 stack-data==0.6.2
+threadpoolctl==3.2.0
 tornado==6.3.2
 traitlets==5.9.0
 typing_extensions==4.7.1
