--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asttokens==2.2.1
 backcall==0.2.0
+black==23.11.0
+click==8.1.7
 comm==0.1.3
 contourpy==1.0.7
 cycler==0.11.0
@@ -18,11 +20,13 @@ jupyter_core==5.3.1
 kiwisolver==1.4.4
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mypy-extensions==1.0.0
 nest-asyncio==1.5.6
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
 parso==0.8.3
+pathspec==0.11.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
@@ -41,6 +45,7 @@ scipy==1.10.1
 six==1.16.0
 stack-data==0.6.2
 threadpoolctl==3.2.0
+tomli==2.0.1
 tornado==6.3.2
 traitlets==5.9.0
 typing_extensions==4.7.1
