--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ importlib-metadata==6.8.0
 importlib-resources==5.12.0
 ipykernel==6.24.0
 ipython==8.14.0
+isort==5.13.2
 jedi==0.18.2
 joblib==1.3.2
 jupyter_client==8.3.0
