--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,54 @@
-asttokens==2.2.1
-backcall==0.2.0
-black==23.11.0
-click==8.1.7
-comm==0.1.3
-contourpy==1.0.7
-cycler==0.11.0
-debugpy==1.6.7
-decorator==5.1.1
-executing==1.2.0
-fonttools==4.39.2
-importlib-metadata==6.8.0
-importlib-resources==5.12.0
-ipykernel==6.24.0
-ipython==8.14.0
-isort==5.13.2
-jedi==0.18.2
-joblib==1.3.2
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-kiwisolver==1.4.4
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mypy-extensions==1.0.0
-nest-asyncio==1.5.6
-numpy==1.24.2
-packaging==23.0
-pandas==1.5.3
-parso==0.8.3
-pathspec==0.11.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==3.8.1
-prompt-toolkit==3.0.39
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.15.1
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.7.1
-pyzmq==25.1.0
-scikit-learn==1.3.1
-scipy==1.10.1
-six==1.16.0
-stack-data==0.6.2
-threadpoolctl==3.2.0
-tomli==2.0.1
-tornado==6.3.2
-traitlets==5.9.0
-typing_extensions==4.7.1
-wcwidth==0.2.6
-zipp==3.15.0
+asttokens
+backcall
+black
+click
+comm
+contourpy
+cycler
+debugpy
+decorator
+executing
+fonttools
+importlib-metadata
+importlib-resources
+ipykernel
+ipython
+isort
+jedi
+joblib
+jupyter_client
+jupyter_core
+kiwisolver
+matplotlib
+matplotlib-inline
+mypy-extensions
+nest-asyncio
+numpy
+packaging
+pandas
+parso
+pathspec
+pexpect
+pickleshare
+Pillow
+platformdirs
+prompt-toolkit
+psutil
+ptyprocess
+pure-eval
+Pygments1
+pyparsing
+python-dateutil
+pytz
+pyzmq
+scikit-learn
+scipy
+six
+stack-data
+threadpoolctl
+tomli
+tornado
+traitlets
+typing_extensions
+wcwidth
+zipp
