--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,42 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "editor.defaultFormatter": "ms-python.black-formatter",
+  "flake8.args": [
+    "--max-line-length=150",
+    "--ignore=E203, E741,W503"
+  ],
+  "cSpell.words": [
+    "clabel",
+    "cmap",
+    "colorbar",
+    "contourf",
+    "eles",
+    "figsize",
+    "fpds",
+    "linestyles",
+    "markersize",
+    "minmax",
+    "ndarray",
+    "pcolormesh",
+    "pointcare",
+    "popt",
+    "setflags",
+    "xlabel",
+    "xlim",
+    "xticks",
+    "ylabel",
+    "ylim",
+    "yticks"
+  ],
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    "./test",
+    "-p",
+    "test_*.py"
+  ],
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true
 }
